// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`runTask handles Promise.All inside task 1`] = `
Array [
  "asyncResolve_4",
  Array [
    "asyncResolve_10",
    "syncFn_1",
  ],
  "asyncResolve_5",
]
`;

exports[`runTask handles Promise.All outside task 1`] = `
Array [
  "asyncResolve_10",
  Array [
    "asyncResolve_5",
  ],
  "syncFn_2",
]
`;

exports[`runTask handles a task array 1`] = `
Array [
  "asyncResolve_20",
  "asyncResolve_10",
  "asyncResolve_1",
  "asyncResolve_20",
  "asyncResolve_1",
]
`;

exports[`runTask handles async function 1`] = `
Array [
  "asyncResolve_1",
]
`;

exports[`runTask handles async reject 1`] = `[Error: asyncReject_1]`;

exports[`runTask handles async rejected errors 1`] = `[Error: asyncReject_5]`;

exports[`runTask handles async task array errors 1`] = `[Error: asyncReject_5]`;

exports[`runTask handles async throw 1`] = `[Error: asyncThrow_1]`;

exports[`runTask handles async thrown errors 1`] = `[Error: asyncThrow_5]`;

exports[`runTask handles missing name 1`] = `[Error: 'name' is required for run syntax]`;

exports[`runTask handles missing task 1`] = `[Error: 'task' is required for run syntax]`;

exports[`runTask handles named objects 1`] = `
Array [
  Array [
    "asyncResolve_10",
  ],
]
`;

exports[`runTask handles options 1`] = `
Array [
  "syncFn_1|1|2|3",
]
`;

exports[`runTask handles sync function 1`] = `
Array [
  "syncFn_1",
]
`;

exports[`runTask handles sync functions 1`] = `
Array [
  "asyncResolve_10",
  "syncFn_2",
  "asyncResolve_10",
  "syncFn_1",
  "asyncResolve_5",
]
`;

exports[`runTask handles sync task array errors 1`] = `[Error: syncThrow_5]`;

exports[`runTask handles sync throw 1`] = `[Error: syncThrow_1]`;

exports[`runTask handles sync thrown errors 1`] = `[Error: syncThrow_1]`;

exports[`runTask passes options to all functions 1`] = `
Array [
  "asyncResolve_10|1|2|3",
  "syncFn_2|1|2|3",
  "asyncResolve_10|1|2|3",
  "syncFn_1|1|2|3",
  "asyncResolve_5|1|2|3",
]
`;

exports[`runTask runs array of tasks 1`] = `
Array [
  "asyncResolve_10",
  "asyncResolve_1",
  "asyncResolve_5",
]
`;
